designed and finalized the contents in elementary section

--- a/edu.html
+++ b/edu.html
@@ -6,7 +6,7 @@
         <div id="container">
             <div class="content">
                 <div class="left">
-                    <img src="images/acd.png">
+                    <img src="images/acd.png" style="height:120%; width:120%">
                 </div>
                 <div class="right">
                     <h1>Assumption College of Davao</h1>
