added and finalized contents on the highschool section

--- a/edu.html
+++ b/edu.html
@@ -16,8 +16,12 @@
             </div>
             <div class="content">
                 <div class="left">
+                    <img src="images/hca.png" style="height:100%; width:100%">
                 </div>
                 <div class="right">
+                    <h1>Holy Cross of Agdao</h1>
+                    <h1><hr></h1>
+                    <h3>Highschool</h3>
                 </div>
             </div>
             <div class="content">
