--- a/edu.html
+++ b/edu.html
@@ -26,8 +26,12 @@
             </div>
             <div class="content">
                 <div class="left">
+                    <img src="images/usep.png" style="height:100%; width:100%">
                 </div>
                 <div class="right">
+                    <h1>University of Southeastern Philippines</h1>
+                    <h1><hr></h1>
+                    <h3>College</h3>
                 </div>
             </div>
         </div>
