added link button for holycross school

--- a/edu.html
+++ b/edu.html
@@ -13,7 +13,7 @@
                     <h1><hr></h1>
                     <h3>Elementary</h3>
                     <a href="http://www.assumptiondavao.edu.ph/acd2/" target="_blank">
-                        <img src="images/button.png" style="margin-left: 420px">
+                        <img src="images/button.png" style="margin-left: 450px">
                     </a>
                 </div>
             </div>
@@ -25,6 +25,9 @@
                     <h1>Holy Cross of Agdao</h1>
                     <h1><hr></h1>
                     <h3>Highschool</h3>
+                    <a href="https://www.facebook.com/holycrossofagdao/" target="_blank">
+                        <img src="images/button.png" style="margin-left: 450px">
+                    </a>
                 </div>
             </div>
             <div class="content">
